--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,6 @@ dependencies {
     compile 'com.google.apis:google-api-services-drive:v2-rev170-1.20.0'
     
 }
+run{
+ standardInput = System.in
+}
