--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'DriveQuickstart'
+mainClassName = 'Main'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 version = '1.0'
@@ -9,12 +9,10 @@ version = '1.0'
 repositories {
     mavenCentral()
 }
-
 dependencies {
     compile 'com.google.api-client:google-api-client:1.20.0'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.20.0'
     compile 'com.google.apis:google-api-services-drive:v2-rev170-1.20.0'
-    
 }
 run{
  standardInput = System.in
